tests/typechecking/valid/function.ml
let rec func x = x + 1 in func 1