tests/typechecking/invalid/function2.ml
let rec f a c = a + c in
f true 1